--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command = "npm run build"
-  publish = ".next"
-  environment = { NODE_VERSION = "20" }
+  command = "npm install --legacy-peer-deps && npm run build"
+  publish = "out"
+  environment = { NODE_VERSION = "18" }
 
 [[redirects]]
   from = "/*"
