--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "node deploy.js",
+    "deploy:netlify": "npm install --legacy-peer-deps && npm run build",
+    "deploy:vercel": "npm install --legacy-peer-deps && npm run build && npx vercel --prod"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -52,7 +55,7 @@
     "jwt-decode": "latest",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
-    "next": "16.0.0",
+    "next": "14.2.15"
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
